Completed Dele functionality and minor changes in High School and Individual Sports View

--- a/html/pages/profilesetting/templates/season-item.html
+++ b/html/pages/profilesetting/templates/season-item.html
@@ -6,7 +6,7 @@
 	<span class="span3"><strong>{{year}}</strong></span>
 	{{#seasons}}
 	<span class="span3">
-		<input type="checkbox" class="chkSeasons" seasonId = '{{season_id}}' />
+		<input type="checkbox" class="chkSeasons" year='{{year}}' seasonId = '{{season_id}}' />
 		<label>&nbsp;{{season_name}} </label> </span>
 	{{/seasons}}
 </div>
