--- a/html/pages/profilesetting/templates/level.html
+++ b/html/pages/profilesetting/templates/level.html
@@ -1,7 +1,7 @@
 <div class="div-levels">
 	<div class="well-small span12">
 		<!-- class="ddl-school-complevel"-->
-		<select class="ddl-complevel">
+		<select class="ddl-complevel" orgsid="{{orgsId}}" sportsid="{{sportsId}}">
 			<option value="">Select Level</option>
 			{{#levels}}
 			<option value="{{complevel_id}}">{{complevel_name}}</option>
@@ -20,7 +20,7 @@
 			<span class="span3"><strong>{{year}}</strong></span>
 			{{#seasons}}
 			<span class="span3">
-				<input type="checkbox" class="chkSeasons" seasonId = '{{season_id}}' />
+				<input type="checkbox" class="chkSeasons" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
 				<label>&nbsp;{{season_name}} </label> </span>
 			{{/seasons}}
 		</div>
@@ -35,15 +35,15 @@
 	<!--modal-school-positions-->
 <div class="modal hide fade position-modal modal-positions" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-header">
-<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+<button type="button" class="close btn-Close-Positions" data-dismiss="modal" aria-hidden="true">×</button>
 <h3 id="myModalLabel">Positions</h3>
 </div>
 <div class="modal-body modal-position-body">
 	
 </div>
 <div class="modal-footer">
-<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-<button class="btn btn-primary">Save changes</button>
+<button class="btn btn-Close-Positions" data-dismiss="modal" aria-hidden="true">Finish</button>
+<!--<button class="btn btn-primary btn-Save-Positions">Finish</button> -->
 </div>
 </div>
 </div>
