Added the City input. Backend event capturing needs to be done.

--- a/html/packages/location/templates/city.html
+++ b/html/packages/location/templates/city.html
@@ -1,1 +1,8 @@
-<input type="text" name="city" id="city" placeholder="City Name"/>
+<input class="hint" type="text" spellcheck="off" autocomplete="off"
+	disabled value="Rishabh"
+	style="position: absolute; top: 0px; left: 0px; border-color: transparent; box-shadow: none; background: none repeat scroll 0% 0% #FFFFFF; color: #999999;">
+<input class="query" type="text" placeholder="cities" autocomplete="off"
+	spellcheck="false" value="Rish"
+	style="position: relative; vertical-align: top; background-color: transparent; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;">
+<span
+	style="position: absolute; left: -9999px; white-space: nowrap; font-family: MS Shell Dlg; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 400; word-spacing: 0px; letter-spacing: 0px; text-indent: 0px; text-rendering: optimizelegibility; text-transform: none; visibility: hidden;">Rish</span>
