--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -15,7 +15,7 @@
 
 <div>
 	<span class="span2">What School?</span>
-	<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="1"/>
+	<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="0"/>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
@@ -25,7 +25,7 @@
 	</div>
 	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
 </div>
-<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span>
+<!-- <span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary btn-finish-addsports" >Finish</a> </span> -->
 </div>
 <!--SCHOOL LISTING SECTION HERE-->
 <!--lIST-->
