--- a/html/pages/profilesetting/templates/level.html
+++ b/html/pages/profilesetting/templates/level.html
@@ -11,7 +11,7 @@
 		<p class="field-message"></p>
 	</div>
 	<!-- id="div-school-seasons"-->
-	<div>
+	<div class="div-seasons displayNone">
 		<div class="span12 well-small">
 			<a href="javascript:void(0)" class="down arrow">&uarr;</a>
 		</div>
