--- a/html/pages/profilesetting/templates/sportscheckbox.html
+++ b/html/pages/profilesetting/templates/sportscheckbox.html
@@ -1,5 +1,5 @@
 {{#sports}}
 <span class="span3">
-			<input type="checkbox" class="chk-single" sportid="{{sport_id}}" />
+			<input type="checkbox" id="chk-ind-{{sport_id}}" class="chk-single" sportid="{{sport_id}}" />
 			<label>{{sport_name}}</label> </span>
 {{/sports}}
