We're still missing the display for existing teams. This is the section in the wire frame that has no fields for editing but just displays the teams the user is already associated with. When the edit icon is clicked it should become editable like the grid that you have set up.

--- a/html/pages/profilesetting/templates/level.html
+++ b/html/pages/profilesetting/templates/level.html
@@ -20,7 +20,7 @@
 			<span class="span3"><strong>{{year}}</strong></span>
 			{{#seasons}}
 			<span class="span3">
-				<input type="checkbox" class="chkSeasons" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
+				<input type="checkbox" class="chkSeasons chkSeasons-{{season_id}}-{{year}}" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
 				<label>&nbsp;{{season_name}} </label> </span>
 			{{/seasons}}
 		</div>
