Feedbacks on Ticket Number 904
    don't display positions popup if the payload on the positions call is null.
    clear out that box and re-call it when a new season is selected because the positions are different in every season.
    it seems like the only way to edit positions is to delete and re-add the season. Can we put a positions link next to each season that will open up the positions popup?

--- a/html/pages/profilesetting/templates/level.html
+++ b/html/pages/profilesetting/templates/level.html
@@ -21,7 +21,9 @@
 			{{#seasons}}
 			<span class="span3">
 				<input type="checkbox" class="chkSeasons chkSeasons-{{season_id}}-{{year}}" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
-				<label>&nbsp;{{season_name}} </label> </span>
+				<label>&nbsp;{{season_name}} </label> 
+				<a href="javascript:void(0)" class="btnOpenPositions"  positions="{{#positions}}{{id}},{{/positions}}">Positions</a>
+				</span>
 			{{/seasons}}
 		</div>
 		{{/Data}}
