--- a/html/pages/profilesetting/templates/season-item.html
+++ b/html/pages/profilesetting/templates/season-item.html
@@ -7,7 +7,9 @@
 	{{#seasons}}
 	<span class="span3">
 		<input type="checkbox" class="chkSeasons" year='{{year}}' seasonId = '{{season_id}}' />
-		<label>&nbsp;{{season_name}} </label> </span>
+		<label>&nbsp;{{season_name}} </label>
+		<a href="javascript:void(0)" class="btnOpenPositions">Positions</a>
+		 </span>
 	{{/seasons}}
 </div>
 {{/Data}}
