Fix opening profile page

--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-ipad.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-iphone4.png" />
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="{{base_url}}css/normalize.css">
     <script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script>
     <script>
         var base_url = '{{base_url}}';
