--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -1,7 +1,7 @@
 
 <div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">Ã—</button>
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 		<h3 id="label">Image Uploader</h3>
 	</div>
 	<div class="modal-body" style="max-height: 200px !important;">
