Removed Save Button from High School And Club View , Applied , After Position in Team Listing

--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -25,7 +25,7 @@
 	</div>
 	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
 </div>
-<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span>
+<!--<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span> -->
 </div>
 <!--CLUBs LISTING SECTION HERE-->
 <!--lIST-->
