--- a/html/pages/profilesetting/templates/teamlist.html
+++ b/html/pages/profilesetting/templates/teamlist.html
@@ -21,7 +21,7 @@
 		<span class="span3">{{complevel}}</span>
 		<span class="span3">
 			{{#positions}}
-			{{name}}
+			{{name}},
 			{{/positions}}
 			
 		</span>
