--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -51,10 +51,12 @@
 <div class="span5">
 	<div class="span2">SEARCH</div>
 	<div class="pull-left">
-		<input type="text"></input>
+		<input type="text" id="search"></input>
 	</div>
-	<div class="">
-		<i class="icon-facetime-video"></i> <i class="icon-picture"></i> <i
-			class="icon-user"></i> <i class="icon-user"></i>
+	<div >
+		<a id="video" class="searchBtn" data-number="0" href="javascript:void(0)"><i class="icon-facetime-video"></i></a>
+		<a id="image" class="searchBtn" data-number="1" href="javascript:void(0)"><i class="icon-picture"></i></a>
+		<a id="user" class="searchBtn" data-number="2" href="javascript:void(0)"><i class="icon-user"></i></a>
+		<a id="game" class="searchBtn" data-number="3" href="javascript:void(0)"><i class="icon-user"></i></a>
 	</div>
 </div>
