location/state is working

--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -6,6 +6,6 @@
 	</div>
 	<div id="top-rated" class="offset3 span8"></div>
 	<div id="menu" class="offset3 span7"></div>
-	<div id="search-results" class="offset3 span7"></div>
+	<div id="search-result" class="offset3 span7"></div>
 </div>
 <div id="main-footer"></div>
