--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -29,15 +29,15 @@
 	<div class="dd">
 		<div class="left text-center">
 			<strong>Guys</strong>
-			<div id="boys" class="text-left sport-list"></div>
+			<div id='boys' class="text-left sport-list"></div>
 		</div>
 		<div class="left text-center">
 			<strong>Girls</strong>
-			<div id=girls class="text-left sport-list"></div>
+			<div id='girls' class="text-left sport-list"></div>
 		</div>
 		<div class="left text-center">
 			<strong>Both</strong>
-			<div id="both" class="text-left sport-list"></div>
+			<div id='both' class="text-left sport-list"></div>
 		</div>
 	</div>
 </div>
