--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -24,7 +24,7 @@
 }
 .fileuploader
 {
-	//margin: 10px 5px 0 10px;
+	margin: 10px 5px 0 10px;
 }
 .previewprogress
 {
@@ -39,4 +39,34 @@
 .previewrotate
 {
 	margin-bottom: 25%;
+}
+
+.modal
+{
+    left: 10%;
+    z-index: 1050;
+    width: 80%;
+    margin-left:0px;
+}
+
+.modal-body
+{
+    max-height: 500px !important;
+    height:500px;
+    width: 80%;
+    float:left;
+}
+
+#main-content-img
+{
+    width:15%;
+    float:left;
+    height:100%;
+    background-color: #f5f5f5;
+    padding:14px;
+}
+
+#imageuploadForm input[type="file"]
+{
+    width:90%;
 }
