--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -1,17 +1,25 @@
+<div id="url" class="url">URL
+	<select id="url_tag">
+		<option value="user">Users</option>
+		<option value="game">Games</option>
+		<option value="team">Teams</option>
+	</select>
+	<input type="text" name="id_tag" id="id_tag" placeholder="ID"/>
+</div>
+<a href="#imgUploadModal" role="button" class="btn" data-toggle="modal">Upload Image</a>
 
 <div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 		<h3 id="label">Image Uploader</h3>
 	</div>
-	<div class="modal-body" style="max-height: 200px !important;">
+
+	<div id="main-content-img"></div>
+
+	<div class="modal-body">
 		<div id="errormsg"></div>
 		<div id="preview"></div>
-		
 	</div>
-	<div id="main-content-img" class="modal-footer">
-		
-	</div>
-		
-		
+
 </div>
