Got image upload working on profile page

--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -1,4 +1,4 @@
-<div id="url" class="url">URL
+<!--<div id="url" class="url">URL
 	<select id="url_tag">
 		<option value="user">Users</option>
 		<option value="game">Games</option>
@@ -7,8 +7,7 @@
 	<input type="text" name="id_tag" id="id_tag" placeholder="ID"/>
 </div>
 <a href="#imgUploadModal" role="button" class="btn" data-toggle="modal">Upload Image</a>
-
-<div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+--><div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
