--- a/html/packages/media/templates/add-media.html
+++ b/html/packages/media/templates/add-media.html
@@ -1,5 +1,5 @@
 
 Add 
 {{#links}}
-<a href="{{link}}" title="{{label}}">{{label}}</a> 
+<a href="{{link}}" title="{{label}}" id="{{id}}">{{label}}</a>
 {{/links}}
