--- a/html/pages/userresume/templates/academic.html
+++ b/html/pages/userresume/templates/academic.html
@@ -2,27 +2,14 @@
 <div class="row-fluid">
 	<span class="spn-black-heading  well-small">Academic</span>
 </div>
-<!--
-<div id="container-rdtree" class="row-fluid">
-	{{#rdtrees}}
-	<div class="well section-rdtree-items_h">
-		<div class="row-fluid"><h3>{{title}}</h3><br />
-			<a href="javascript:void(0)" class="btn-edit-rdtree_h">Edit</a>
-		</div>
-		{{#data}}
-			<div class="row-fluid">
-				<span class="span3">{{name}}</span>
-				<span class="span3"><input type="text" class="txtRdTrees_h" rdId="{{id}}" value="{{val}}" disabled="disabled"/></span>
-			</div>
-		{{/data}}
-		<a href="javascript:void(0)" class="btn btn-primary btn-Finish-RdTree_h displayNone">Finish</a>
-	</div>
-	{{/rdtrees}}
-</div> -->
+<div id="container-academic-gpa">
+	
+</div>
 
 <div id="container-StandardizedTest">
-	<div class="clearfix div-add-dotted well-small btn-Add-test">
-	+ Send Resume
+	
 </div>
+<div id="container-ApTest">
+	
 </div>
 </div>
