Save Functionality In Resume Data Tree View

--- a/html/pages/userresume/templates/awards.html
+++ b/html/pages/userresume/templates/awards.html
@@ -1,6 +1,6 @@
 <div class="row-fluid sub-section-prof-setting well well-large">
 <div class="row-fluid">
-	<span class="spn-black-heading  well-small">Work Outs</span>
+	<span class="spn-black-heading  well-small">Awards</span>
 </div>
 <div id="container-rdtree" class="row-fluid">
 	{{#rdtrees}}
