Implemented Awards View and Collection On Resume Screen

--- a/html/pages/userresume/templates/layout.html
+++ b/html/pages/userresume/templates/layout.html
@@ -29,6 +29,12 @@
 	</div>
 <!-- Academic Gpa Section Ends -->
 
+<!-- User Awards Section Starts -->
+	<div id="section-awards">
+		
+	</div>
+<!-- User Awards Section Ends -->
+
 	<div id="main-footer-prof-setting">
 	</div>
 </div>
