Rectified bug in AP Test and Gpa

--- a/html/pages/userresume/templates/awards.html
+++ b/html/pages/userresume/templates/awards.html
@@ -5,7 +5,7 @@
 
 <div class="section-new-award"> 
 <div class="div-add-dotted well-small btn-Add-gpa" testids="{{TestIds}}">
-	+ Add a Sport
+	+ Add an Award
 </div>
 
 </div>
