--- a/html/pages/userresume/templates/gpa.html
+++ b/html/pages/userresume/templates/gpa.html
@@ -1,6 +1,6 @@
 <h3>GPA</h3>
 <div class="div-add-dotted well-small btn-Add-gpa" testids="{{TestIds}}">
-	+ Add a Test
+	+ Add a Gpa
 </div>
 <div class="section-Add-Gpa displayNone">
 	<div class="alert alert-danger displayNone error_h"></div>
