--- a/html/pages/userresume/templates/awards.html
+++ b/html/pages/userresume/templates/awards.html
@@ -1,15 +1,39 @@
 <div class="row-fluid sub-section-prof-setting well well-large">
-<div class="row-fluid">
-	<span class="spn-black-heading  well-small">Awards</span>
-</div>
+	<div class="row-fluid">
+		<span class="spn-black-heading  well-small">Awards</span>
+	</div>
 
-<div class="section-new-award"> 
-<div class="div-add-dotted well-small btn-Add-gpa" testids="{{TestIds}}">
-	+ Add an Award
-</div>
+	<div class="section-new-award">
+		<div class="div-add-dotted well-small btn-Add-award_h" testids="{{TestIds}}">
+			+ Add an Award
+		</div>
+		<div class="well section-new-controls displayNone">
+			<div class="clearfix row-fluid">
+				<span class="span2">Sports :</span>
+				<span class="span3"> <select class="ddl-sports-awards_h"></select> </span>
+				<span class="span2">Name :</span>
+				<span class="span3">
+					<input type="text" class="txtAwards_h txt_name_h" value="{{name}}"/>
+				</span>
+			</div>
 
-</div>
-<div id="section-list-awards" class="row-fluid">
-	
-</div>
+			<div class="clearfix row-fluid">
+				<span class="span2">Description :</span>
+				<span class="span3">
+					<input type="text" class="txtAwards_h txt_description_h" value="{{description}}"/>
+				</span>
+				<span class="span2">year :</span>
+				<span class="span3">
+					<input type="text" class="txtAwards_h txt_year_h" value="{{year}}"/>
+				</span>
+			</div>
+			<div class="clearfix row-fluid">
+				<span class="span12"> <a href="javascript:void(0)" class="btn btn-primary btn-Save_award_h" >Save</a> <a href="javascript:void(0)" class="btn btn-Cancel-New">Cancel</a> <span class="alert alert-danger displayNone error_h"></span> <span class="alert alert-success displayNone success_h"></span>
+			</div>
+		</div>
+		<br/>
+	</div>
+	<div id="section-list-awards" class="row-fluid">
+
+	</div>
 </div>
