--- a/html/pages/userresume/templates/layout.html
+++ b/html/pages/userresume/templates/layout.html
@@ -35,6 +35,13 @@
 	</div>
 <!-- User Awards Section Ends -->
 
+<!-- User Contacts Section Starts -->
+	<div id="section-contacts">
+		
+	</div>
+<!-- User Contacts Section Ends -->
+
+
 	<div id="main-footer-prof-setting">
 	</div>
 </div>
