Completed Awards View and Reference View

--- a/html/pages/userresume/templates/layout.html
+++ b/html/pages/userresume/templates/layout.html
@@ -35,6 +35,12 @@
 	</div>
 <!-- User Awards Section Ends -->
 
+<!-- User References Section Starts -->
+	<div id="section-references">
+		
+	</div>
+<!-- User Reference Section Ends -->
+
 <!-- User Contacts Section Starts -->
 	<div id="section-contacts">
 		
