--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -13,14 +13,14 @@
 	</div>
 	
 	</div>
-	<div class="div-tag-list_h">
-		
+	<div class="div-tag-list_h">		
 	<div class="section-sports_h displayNone">
 		<label class="lbl-tag-sport-name_h"></label><span>
 			<button class="btn btn-tag-edit-sport_h">Edit</button></span>
 	</div>
 	
 	<div class="section-team_h">
+		<strong>Teams :</strong> <br/>
 		<label class="lbl-tag-team-name_h"></label><span><button class="btn btn-tag-edit-team_h displayNone">Edit</button></span>
 	</div>
 	
@@ -29,9 +29,10 @@
 		Tag a Team : 
 		<br/>
 		<input type="text" class="txt-tag-team-state_h" placeholder="Enter Team" />
-		<input type="text"class="txt-tag-team-school_h" placeholder="Enter High School" />
-		<select class="ddl-tag-team-level_h"></select>
-		<select class="ddl-tag-team-season_h"></select>
+		<input type="text"class="txt-tag-team-school_h displayNone" placeholder="Enter High School" />
+		<select class="ddl-tag-team-level_h displayNone"></select>
+		<select class="ddl-tag-team-season_h displayNone"></select>
+		<span class="alert alert-danger displayNone field-message"></span> 
 		<button class="btn btn-primary btn-tag-team-Done_h displayNone">Done</button>
 	</div>
 	
@@ -57,7 +58,7 @@
 	<div class="section-link_h displayNone">
 		Tag:
 		&nbsp<a href="javascript:void(0)" class="link-tag-team_h">Team</a>
-		&nbsp;<a href="javascript:void(0)" class="link-tag-player_h">Player</a>
-		&nbsp;<a href="javascript:void(0)" class="link-tag-Game_h">Game</a>
+		&nbsp;<a href="javascript:void(0)" class="link-tag-player_h displayNone">Player</a>
+		&nbsp;<a href="javascript:void(0)" class="link-tag-Game_h displayNone">Game</a>
 	</div>
 </div>
