Implemented Game And Player Tagging .

--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -19,7 +19,7 @@
 			<button class="btn btn-tag-edit-sport_h">Edit</button></span>
 	</div>
 	
-	<div class="section-team_h">
+	<div class="section-team_h displayNone">
 		<strong>Teams :</strong> <br/>
 		<label class="lbl-tag-team-name_h"></label><span><button class="btn btn-tag-edit-team_h displayNone">Edit</button></span>
 	</div>
@@ -28,7 +28,7 @@
 	<div class="section-tag-team_h displayNone">
 		Tag a Team : 
 		<br/>
-		<input type="text" class="txt-tag-team-state_h" placeholder="Enter Team" />
+		<input type="text" class="txt-tag-team-state_h" placeholder="Enter State" />
 		<input type="text"class="txt-tag-team-school_h displayNone" placeholder="Enter High School" />
 		<select class="ddl-tag-team-level_h displayNone"></select>
 		<select class="ddl-tag-team-season_h displayNone"></select>
@@ -46,19 +46,23 @@
 			+
 		</span>
 		<br/>
-		<button class="btn btn-primary btn-tag-player-Done_h displayNone">Done</button>
+		<button class="btn btn-primary btn-tag-player-Done_h">Done</button>
 	</div>
 	
 	<div class="section-tag-game_h displayNone">
 		<select class="ddl-tag-game_h"></select>
+		<br/>
+		<span class="alert alert-danger displayNone field-message"></span>
 		<br/>
 		<button class="btn btn-primary btn-tag-game-Done_h displayNone">Done</button>
 	</div>
 	
 	<div class="section-link_h displayNone">
 		Tag:
-		&nbsp<a href="javascript:void(0)" class="link-tag-team_h">Team</a>
+		&nbsp;<a href="javascript:void(0)" class="link-tag-team_h">Team</a>
 		&nbsp;<a href="javascript:void(0)" class="link-tag-player_h displayNone">Player</a>
 		&nbsp;<a href="javascript:void(0)" class="link-tag-Game_h displayNone">Game</a>
+		<br/>
+		<span class="alert alert-danger displayNone field-message"></span>
 	</div>
 </div>
