connected tag functionality with calling controller or view by Channel Subscribe and Publish

--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -30,10 +30,11 @@
 		<br/>
 		<input type="text" class="txt-tag-team-state_h" placeholder="Enter State" />
 		<input type="text"class="txt-tag-team-school_h displayNone" placeholder="Enter High School" />
-		<select class="ddl-tag-team-level_h displayNone"></select>
-		<select class="ddl-tag-team-season_h displayNone"></select>
-		<span class="alert alert-danger displayNone field-message"></span> 
+		<!-- <select class="ddl-tag-team-level_h displayNone"></select>
+		<select class="ddl-tag-team-season_h displayNone"></select> -->
+	 	<span class="alert alert-danger displayNone field-message"></span> 
 		<button class="btn btn-primary btn-tag-team-Done_h displayNone">Done</button>
+		
 	</div>
 	
 	<div class="section-tag-player_h displayNone">
@@ -65,4 +66,6 @@
 		<br/>
 		<span class="alert alert-danger displayNone field-message"></span>
 	</div>
+	
+	<button class="btn btn-primary btn-tag-Finish_h">Finish</button>
 </div>
