--- a/html/pages/profile/templates/sport-select.html
+++ b/html/pages/profile/templates/sport-select.html
@@ -1,5 +1,5 @@
 <select name="sport" id="select-sport">
 {{#payload}}
-    <option value="{{sport_id}}">{{sport_name}}</option>    
+    <option value="{{id}}">{{sport_name}}</option>
 {{/payload}}
 </select>
