--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -30,8 +30,8 @@
 		<br/>
 		<input type="text" class="txt-tag-team-state_h" placeholder="Enter State" />
 		<input type="text"class="txt-tag-team-school_h displayNone" placeholder="Enter High School" />
-		<!-- <select class="ddl-tag-team-level_h displayNone"></select>
-		<select class="ddl-tag-team-season_h displayNone"></select> -->
+		<select class="ddl-tag-team-level_h displayNone"></select>
+		<select class="ddl-tag-team-season_h displayNone"></select>
 	 	<span class="alert alert-danger displayNone field-message"></span> 
 		<button class="btn btn-primary btn-tag-team-Done_h displayNone">Done</button>
 		
