Implemented cities search and filtering on general tagging screen .

--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -29,9 +29,10 @@
 		Tag a Team : 
 		<br/>
 		<input type="text" class="txt-tag-team-state_h" placeholder="Enter State" />
-		<input type="text"class="txt-tag-team-school_h displayNone" placeholder="Enter High School" />
-		<select class="ddl-tag-team-level_h displayNone"></select>
-		<select class="ddl-tag-team-season_h displayNone"></select>
+		<input type="text" class="txt-tag-team-city_h displayNone" placeholder="Enter City" />
+		<input type="text"class="txt-tag-team-school_h displayNone" placeholder="Enter Team" />
+	<!--	<select class="ddl-tag-team-level_h displayNone"></select>
+		<select class="ddl-tag-team-season_h displayNone"></select> -->
 	 	<span class="alert alert-danger displayNone field-message"></span> 
 		<button class="btn btn-primary btn-tag-team-Done_h displayNone">Done</button>
 		
