--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -59,11 +59,11 @@
 
 #main-content-img
 {
-    width:15%;
+    width:90%;
     float:left;
     height:100%;
     background-color: #f5f5f5;
-    padding:14px;
+    padding:5%;
 }
 
 #imageuploadForm input[type="file"]
