--- a/html/pages/videopreview/templates/upload.html
+++ b/html/pages/videopreview/templates/upload.html
@@ -9,9 +9,9 @@
 	</div>
 </form>-->
 
-<div id="file_upload"></div>
+<div id="file_upload">PSBH</div>
 <form class="form" id="upload_form" method="post">
-	<div id="container">
+	<div id="container_plupload">
 	<div id="filelist"></div>
 
 	<span class="file-wrapper">
@@ -23,7 +23,19 @@
 		<input type="text" id="title" name="title" style="width:95%" placeholder="Enter a Title"/>
 		<label style="margin-bottom: 2px;">Sport</label>
 		<select name="sports_id" id="sports_id" style="width:95%;" class="">
-			<option value="46">Baseball</option>				<option value="47">Basketball</option>				<option value="48">Cross Country</option>				<option value="49">Football</option>				<option value="50">Rugby</option>				<option value="51">Golf</option>				<option value="52">Hockey</option>				<option value="53">Lacrosse</option>				<option value="54">Soccer</option>				<option value="55">Swimming</option>				<option value="56">Tennis</option>				<option value="57">Track and Field</option>				<option value="58">Volleyball</option>				<option value="59">Water Polo</option>				<option value="60">Wrestling</option>				<option value="61">Crew</option>				<option value="62">Basketball</option>				<option value="63">Cross Country</option>				<option value="64">Cheerleading</option>				<option value="65">Golf</option>				<option value="66">Hockey</option>				<option value="67">Lacrosse</option>				<option value="68">Softball</option>				<option value="69">Soccer</option>				<option value="70">Swimming</option>				<option value="71">Rifle</option>				<option value="72">Tennis</option>				<option value="73">Track and Field</option>				<option value="74">Volleyball</option>				<option value="75">Water Polo</option>				<option value="76">Field Hockey</option>				<option value="77">Crew</option>				<option value="78">Gymnastics</option>				<option value="79">Rifle</option>				<option value="80">Skiing</option>				<option value="81">Diving</option>				<option value="82">Indoor Track</option>				<option value="83">Fencing</option>				<option value="84">Fencing</option>				<option value="85">Gymnastics</option>				<option value="86">Skiing</option>				<option value="87">Indoor Track</option>				<option value="88">Diving</option>				<option value="89">Squash</option>				<option value="90">Squash</option>				<option value="91">Marathon</option>				<option value="92">Triathalon</option></select>
+			<option value="46">Baseball</option>
+			<option value="47">Basketball</option>	
+			<option value="48">Cross Country</option>
+			<option value="49">Football</option>
+			<option value="50">Rugby</option>	
+			<option value="51">Golf</option>
+			<option value="52">Hockey</option>
+			<option value="53">Lacrosse</option>
+			<option value="54">Soccer</option>	
+			<option value="55">Swimming</option>
+			<option value="56">Tennis</option>
+
+									<option value="57">Track and Field</option>				<option value="58">Volleyball</option>				<option value="59">Water Polo</option>				<option value="60">Wrestling</option>				<option value="61">Crew</option>					<option value="62">Basketball</option>				<option value="63">Cross Country</option>			<option value="64">Cheerleading</option>			<option value="65">Golf</option>					<option value="66">Hockey</option>					<option value="67">Lacrosse</option>				<option value="68">Softball</option>				<option value="69">Soccer</option>					<option value="70">Swimming</option>				<option value="71">Rifle</option>					<option value="72">Tennis</option>					<option value="73">Track and Field</option>			<option value="74">Volleyball</option>				<option value="75">Water Polo</option>				<option value="76">Field Hockey</option>			<option value="77">Crew</option>					<option value="78">Gymnastics</option>				<option value="79">Rifle</option>					<option value="80">Skiing</option>					<option value="81">Diving</option>					<option value="82">Indoor Track</option>			<option value="83">Fencing</option>					<option value="84">Fencing</option>					<option value="85">Gymnastics</option>				<option value="86">Skiing</option>					<option value="87">Indoor Track</option>			<option value="88">Diving</option>					<option value="89">Squash</option>					<option value="90">Squash</option>					<option value="91">Marathon</option>				<option value="92">Triathalon</option></select>
 
 		<div id="uploadfiles" class="qq-upload-button" style="width:70px;">Upload</div>
 
