--- a/html/packages/site/templates/comment-form.html
+++ b/html/packages/site/templates/comment-form.html
@@ -1,7 +1,7 @@
-
+<a href="javascript: void(0);" class="add-comment-h">Comment</a>
 {{#payload}}
 
-<form>
+<form class="add-comment-form-h hide" method="post" action="#">
 <div class="row-fluid">
     <div class="field-message submit-result"></div>
     <div class="user-photo"><img src="{{base_url}}{{user_picture}}" alt="{{name}}" />{{name}}</div>
