--- a/html/packages/sportorg/templates/org-item.html
+++ b/html/packages/sportorg/templates/org-item.html
@@ -1,58 +1,85 @@
-
 {{#payload}}
-<div class="org-name">{{org_name}}</div>
-<div class="select-team">
-    <select name="team" id="select-team">
-    {{#teams}}
-        <option value="{{team_id}}">{{complevel}} - {{season}} {{year}}</option>
-    {{/teams}}
-    </select>
-    <div class="teams-info">
-    {{#teams}}
-        <div class="team-info team-info-{{team_id}}" style="display:none">
-            <table class="table team-schedule">
-            {{#schedules}}
-                <tr><!--
-                    <td>
-                    {{#complevel}}
-                        {{name}}
-                    {{/complevel}}
-                    </td>
-                    <td>
-                    {{#season}}
-                        {{name}}
-                    {{/season}}
-                    </td>-->
-                    <td>{{game_name}}</td>
-                    <td>{{game_location}}</td>
-                    <td>{{game_day}}</td>
-                    <td>{{mascot}}</td>
-                    <!--<td>{{num_votes}}</td>
-                    <td>{{num_followers}}</td>-->
-                </tr>
-            {{/schedules}}
-            </table>
-            <a href="team/schedule/{{team_id}}">View full schedule</a>
-            <table class="table team-stats">
-                <tr>
-                    <td></td>
-                    {{#stats}}
-                        <td>{{name}}</td>
-                    {{/stats}}        
-                </tr>
-                <tr>
-                    <td>{{statval}}</td>
-                    {{#stats}}
-                        <td>{{value}}</td>
-                    {{/stats}}        
-                </tr>
-            </table>
-            <a href="team/stats/{{team_id}}">View complete stats</a>
-        </div>                    
-    {{/teams}}
-    </div>
+<div class="org-name">
+	{{org_name}}
 </div>
+<div class="select-team">
+	
+			{{#teams}}
+			<div class="game-box-outer">
+		<ul>
+			
+				{{#schedules}}
+				<li>
+				<a href="javascript: void(0);" class="background-blue team-info-h">
+					
+						<div class="org-popup hide">
+							<ul>
+							{{#teams}}
+								<li>{{gameDay}} | VS. {{team_name}} | Home | W 2-1</li>
+							{{/teams}}
+							</ul>
+						</div>
+				</a>
+				</li>
+				{{/schedules}}
+			
+			</ul>
+	</div>
+			{{/teams}}
+			<!--li>
+				<a href="javascript: void(0);" class="background-orange">b</a>
+			</li-->
+		
 
+	<!--select name="team" id="select-team">
+	{{#teams}}
+	<option value="{{team_id}}">{{complevel}} - {{season}} {{year}}</option>
+	{{/teams}}
+	</select-->
+
+	<!--div class="teams-info">
+	{{#teams}}
+	<div class="team-info team-info-{{team_id}}" style="display:none">
+	<table class="table team-schedule">
+	{{#schedules}}
+	<tr><!--
+	<td>
+	{{#complevel}}
+	{{name}}
+	{{/complevel}}
+	</td>
+	<td>
+	{{#season}}
+	{{name}}
+	{{/season}}
+	</td>
+	<td>{{game_name}}</td>
+	<td>{{game_location}}</td>
+	<td>{{game_day}}</td>
+	<td>{{mascot}}</td>
+	<!--<td>{{num_votes}}</td>
+	<td>{{num_followers}}</td>
+	</tr>
+	{{/schedules}}
+	</table>
+	<a href="team/schedule/{{team_id}}">View full schedule</a>
+	<table class="table team-stats">
+	<tr>
+	<td></td>
+	{{#stats}}
+	<td>{{name}}</td>
+	{{/stats}}
+	</tr>
+	<tr>
+	<td>{{statval}}</td>
+	{{#stats}}
+	<td>{{value}}</td>
+	{{/stats}}
+	</tr>
+	</table>
+	<a href="team/stats/{{team_id}}">View complete stats</a>
+	</div>
+	{{/teams}}-->
+</div>
+</div>
 {{/payload}}
-
-<br/>
