--- a/html/packages/site/templates/comment-item.html
+++ b/html/packages/site/templates/comment-item.html
@@ -2,8 +2,15 @@
 {{#payload}}
 
 <div class="row-fluid">
-    <div class="user-photo"><img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />{{poster}} {{comment_date}}</div>
-    <p>{{comment}}</p>
+    <div class="user-photo">
+    	<img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />
+    </div>
+    <div class="comment-box">
+    	<span>{{poster}} {{comment_date}}</span>
+    	<p>{{comment}}</p>
+    </div>
 </div>
 {{/payload}}
+
+
 
