--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -32,14 +32,15 @@
 	    
 	    <div class="span5">
 	    	<div>Stats</div>
-	    	<ul class="stats-ul">
+	    	<div id="fitnessbasic-wrap"></div>
+	    	<!--ul class="stats-ul">
 	    		<li>GAMES 12</li>
 	    		<li>FOULS 2 </li>
 	    		<li>SHOUTS 14</li>
 	    		<li>GOALS 5</li>
 	    		<li>ASSISTS 7</li>
 	    		<li>SHUTOUTS 2</li>
-	    	</ul>
+	    	</ul-->
 	    </div>
 	</div>    
     
