--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -16,8 +16,8 @@
 	<div class="row-fluid">
 		<div class="span4" id="main-sidebar">
 			<div id="org-wrap" class="clearfix hide"></div>
-			<div id="related-wrap" class="clearfix hide"></div>
-			<div id="fitnessbasic-wrap" class="clearfix hide"></div>
+			<div id="related-wrap" class="clearfix"></div>
+			<div  class="clearfix"></div>
 		</div>
 	</div>
 	
