--- a/html/pages/team/team.css
+++ b/html/pages/team/team.css
@@ -101,8 +101,10 @@
 	border-right: 1px solid #000;
 }
 
-
-.stats-ul li {
+#fitnessbasic-list {
+	margin: 0;
+}
+#fitnessbasic-list li, .stats-ul li {
 	float: left;
 	width: 50%;
 	text-align: center;
@@ -197,4 +199,9 @@ position: relative;
 .org-popup ul {
 	margin: 0;
 	padding: 10px;
+}
+
+.image-list video {
+	width: 100%;
+	height: 100%;
 }
