--- a/html/packages/media/templates/fans-image-item.html
+++ b/html/packages/media/templates/fans-image-item.html
@@ -1,4 +1,4 @@
-
+{{abc}}
 {{#payload}}
 <img  src="{{base_url}}{{image_path}}" alt="{{email}}"/><br/>
 {{#num_votes}}{{num_votes}} Votes{{/num_votes}}
