--- a/html/css/app.css
+++ b/html/css/app.css
@@ -41,3 +41,11 @@ header .signup-email { margin:0 5px; }
 .loader { background: url(../images/loader/loading.gif) no-repeat; width: 100%; height: 50px; margin: 0 auto; background-position: 50% 0; }
 .image-loading-div { position: absolute; }
 .fade-out { opacity: 0.5; }
+
+.floatLeft {float: left;}
+.floatRight {float: right;}
+.displayNone{display:none}
+.pointer {cursor: pointer;}
+
+select.displayNone, textarea.displayNone, input.displayNone{display:none;}
+input[disabled].hasDatepicker,input[readonly].hasDatepicker {background: #FFF; cursor:text;}
