--- a/html/usercontrols/addgame/templates/layout.html
+++ b/html/usercontrols/addgame/templates/layout.html
@@ -1,56 +1,81 @@
 <div class="well-large well span6">
 	<h4>Add Game</h4>
 	<div class="section-Add-Sports_h">
-		<input type="text" class="txt-game-date_h" placeholder="Enter Date" />
-		<input type="text" class="txt-game-time_h"  placeholder="Enter Time" />
-		<select class="ddl-time-period_h">
+		<div class="section-game-date_h">
+		<input type="text" class="txt-game-date_h" placeholder="Enter Date" readonly="readonly" />
+		<input type="text" class="txt-game-time_h hasDatepicker"  placeholder="Enter Time" readonly="readonly"  />
+		<!-- <select class="ddl-time-period_h">
 			<option value="AM">AM</option>
 			<option value="PM">PM</option>
-		</select>
-	<div class="row-fluid">
-		Select Sport:
-	</div>
-	<div class="row-fluid">
+		</select>	 -->
+			<span class="alert alert-danger displayNone field-message"></span>
+		</div>
 		
-		<select class="ddl-game-sports_h"></select>
-		<span class="alert alert-danger displayNone field-message"></span> 
-	<br/>
+		<div class="row-fluid">
+			Select Sport:
+		</div>
+		<div class="row-fluid">
+
+			<select class="ddl-game-sports_h"></select>
+			<span class="alert alert-danger displayNone field-message"></span>
+			<br/>
+		</div>
+
 	</div>
-	
-	</div>
-	<div class="section-game-teams_h displayNone">
-		Select Team 1 : 
+	<div class="section-game-teams_h team-one_h displayNone">
+		Select Team 1 :
 		<select class="ddl-game-userteams_h"></select>
-		
+
 		<a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a>
 		<div class="section-new-team_h">
-		<input type="text" class="txt-game-state_h" placeholder="Enter State" />
-		<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" />
-		<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
+			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
+			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
+			<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
 		</div>
 		<div class="section-score_h">
-			Score : <input type="text" class="txt-score-team1_h" placeholder="Enter State" />
-		<input type="radio" name="rdo-team1_h"> home &nbsp; &nbsp;
-		<input type="radio" name="rdo-team1_h"> away
+			Score :
+			<input type="text" class="txt-score-team_h" placeholder="Enter Score" />
+		</div>
+		<div class="section-game-radio_h">
+		<span class="alert alert-danger displayNone field-message"></span>
+		<input type="radio" name="rdo-team1_h" value="home" class="rdo-game-location_h" team="one">
+		home &nbsp; &nbsp;
+		<input type="radio" name="rdo-team1_h" value="away" class="rdo-game-location_h" team="one">
+		away
 		</div>
 	</div>
-	
-	<div class="section-game-teams_h displayNone">
-		Select Team 2 : 
+
+	<div class="section-game-teams_h team-two_h displayNone">
+		Select Team 2 :
 		<select class="ddl-game-userteams_h"></select>
-		
-		<a href="javascript:void(0)" class="new-team-game_h">Team not listed ?</a>
+
+		<a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a>
 		<div class="section-new-team_h">
-		<input type="text" class="txt-game-state_h" placeholder="Enter State" />
-		<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" />
-		<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
+			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
+			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
+			<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
 		</div>
 		<div class="section-score_h">
-			Score : <input type="text" class="txt-score-team1_h" placeholder="Enter State" />
-		<input type="radio" name="rdo-team2_h"> home &nbsp; &nbsp;
-		<input type="radio" name="rdo-team2_h"> away
+			Score :
+			<input type="text" class="txt-score-team_h" placeholder="Enter Score" />
+		</div>
+		<div class="section-game-radio_h">
+			<span class="alert alert-danger displayNone field-message"></span>
+		<input type="radio" name="rdo-team2_h" value="home" class="rdo-game-location_h"  team="two">
+		home &nbsp; &nbsp;
+		<input type="radio" name="rdo-team2_h" value="away" class="rdo-game-location_h"   team="two">
+		away
 		</div>
 	</div>
 	
-	<button class="btn btn-primary btn-tag-Finish_h floatRight">Create</button>
+	<div class="section-main-location_h">
+		<h4>Location : </h4>
+		<span class="alert alert-danger displayNone field-message"></span>
+	<div class="div-game-location_h">
+		
+	</div>
+	</div>
+	<button class="btn btn-primary btn-game-Finish_h floatRight displayNone">
+		Create
+	</button>
 </div>
