fix upload except video preview

--- a/html/pages/videopreview/templates/upload.html
+++ b/html/pages/videopreview/templates/upload.html
@@ -9,7 +9,7 @@
 	</div>
 </form>-->
 
-<div id="file_upload">PSBH</div>
+<div id="file_upload"></div>
 <form class="form" id="upload_form" method="post">
 	<div id="container_plupload">
 	<div id="filelist"></div>
