--- a/html/css-cpy/normalize.css
+++ b/html/css-cpy/normalize.css
@@ -497,12 +497,12 @@ input[type="search"]::-webkit-search-decoration {
  * Remove inner padding and border in Firefox 3+.
  */
 
-button::-moz-focus-inner,
+/*button::-moz-focus-inner,
 input::-moz-focus-inner {
     border: 0;
     padding: 0;
 }
-
+*/
 /**
  * 1. Remove default vertical scrollbar in IE 6/7/8/9.
  * 2. Improve readability and alignment in all browsers.
