Twice image upload issue and implement comments on game and team page

--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -9,6 +9,10 @@
         <div id="add-media" class="clearfix">
         </div>
         
+        <div>MESSAGE BOARD</div>
+    	<div class="commentson-outer-box-h clear"></div>
+    	<div id="comment_div" class="clearfix"></div>
+        
         <div id="roster-wrap" class="clearfix">
         </div>
     
