--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -24,6 +24,13 @@
     
     </div>
     <div class="span8" id="main-content">
+    	
+    	<div>MESSAGE BOARD</div>
+    	<div class="commentson-outer-box-h clear"></div>
+    	<div id="comment_div" class="clearfix"></div>
+        
+    	
+    	
         Roster
         <div id="roster-wrap" class="clearfix">
         </div>
