--- a/html/pages/team/templates/seasonteam-select.html
+++ b/html/pages/team/templates/seasonteam-select.html
@@ -1,5 +1,5 @@
 <select name="season" id="select-season">
 {{#payload}}
-    <option value="{{seasons_id}}">{{name}}</option>
+    <option value="{{seasons_id}}">{{team_name}}</option>
 {{/payload}}
 </select>
