--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -2,7 +2,7 @@
 <div id="main-header">
 
 </div>
-
+<div id="votes-area-h"></div>
 <div class="row-fluid">
     <div class="span4" id="main-sidebar">
     
